--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
         { name: 'IRINN / KHABAR', url: 'http://127.0.0.1:8000/streams/irinn.m3u8', color: 'cyan' },
         { name: 'KHABAR2', url: 'http://127.0.0.1:8000/streams/khabar2.m3u8', color: 'cyan' },
         { name: 'IFILM Farsi', url: 'http://127.0.0.1:8000/streams/ifilm.m3u8', color: 'cyan' },
+        { name: 'IFILM Farsi (Alt 2)', url: 'https://live.presstv.ir/hls/ifilmfa_4_482/index.m3u8', method: 'web', color: 'green' },
         { name: 'IFILM Dari (HLS)', url: 'https://live.ifilmtv.com/ifilmtv-dari/index.m3u8', color: 'green' },
         { name: 'IFILM English (HLS)', url: 'https://live.ifilmtv.com/ifilmtv-english/index.m3u8', color: 'green' },
         { name: 'IFILM Arabic (HLS)', url: 'https://live.ifilmtv.com/ifilmtv-arabic/index.m3u8', color: 'green' },
@@ -378,6 +379,7 @@
       regional: [
         { name: 'MAHABAD', url: 'http://127.0.0.1:8000/streams/mahabad.m3u8', color: 'cyan' },
         { name: 'KORDESTAN', url: 'http://127.0.0.1:8000/streams/kordestan.m3u8', color: 'cyan' },
+        { name: 'IRIB Kurdistan (HLS)', url: 'https://live.irib.ir/Channel-Live/smil:Channel5/playlist.m3u8', color: 'green' },
         { name: 'KERMANSHAH', url: 'http://127.0.0.1:8000/streams/kermanshah.m3u8', color: 'cyan' },
         { name: 'ILAM', url: 'http://127.0.0.1:8000/streams/ilam.m3u8', color: 'cyan' },
         { name: 'BOOSHEHR', url: 'http://127.0.0.1:8000/streams/booshehr.m3u8', color: 'cyan' },
@@ -433,7 +435,7 @@
         { name: 'Cira TV (HLS) ', url: 'https://live.ciratv.net/ciratv/index.m3u8', color: 'green' },
         { name: 'Rojava TV (HLS) ', url: 'https://live.rojavatv.net/rojavatv/index.m3u8', color: 'green' },
         { name: 'Payam TV (HLS) ', url: 'https://live.payamtv.com/payamtv/index.m3u8', color: 'green' },
-        { name: 'TRT Kurdî (HLS) ', url: 'https://tv-trtturk.medya.trt.com.tr/master_720.m3u8', color: 'green' },
+        { name: 'TRT Kurdî (HLS) ', url: 'https://tv-trtkurdi.medya.trt.com.tr/master_1440.m3u8', color: 'green' },
         { name: 'UTV Hawler (Web)', url: 'http://127.0.0.1:8000/web/utv.html', method: 'web', color: 'orange' },
         { name: 'Baxche (HLS)', url: 'https://live.baxchetv.com/baxche/index.m3u8', color: 'green' },
         { name: 'Afarin Kids (HLS)', url: 'https://live.afarin.tv/afarin-kids/index.m3u8', color: 'green' },
@@ -444,8 +446,6 @@
         { name: 'Karwan TV (öppnas i nytt fönster)', url: 'https://www.karwantv.com/', method: 'external', color: 'purple' }
       ],
       websites: [
-        { name: 'IFILM Farsi (Alt 2)', url: 'http://127.0.0.1:8000/web/ifilm.html', method: 'web', color: 'green' },
-        { name: 'IRIB Kurdistan (HLS)', url: 'https://live.irib.ir/Channel-Live/smil:Channel5/playlist.m3u8', color: 'green' },
         { name: 'Sahar TV (Web)', url: 'http://127.0.0.1:8000/web/sahar.html', method: 'web', color: 'orange' },
         { name: 'Aparatchi - Iran Live TV', url: 'http://127.0.0.1:8000/web/aparatchi.html', method: 'web', color: 'orange' },
         { name: 'IMVBox', url: 'http://127.0.0.1:8000/web/imvbox.html', method: 'web', color: 'orange' },
